# CMPT433-Embedded-Term-Work

./: .gitignore
as1/: CMakeLists.txt  as1-capture.txt  game.c  game.h  gpio_led.c  gpio_led.h  hello.c  joystick.c  joystick.h  main.c  makefile  utils.c  utils.h
as2/app/src/: main.c
as2/hal/include/: adc.h  pwm.h
as2/hal/src/: adc.c  pwm.c
assignment4/include/: display.h  joystick.h
assignment4/src/: display.c  joystick.c
